--- a/package.json
+++ b/package.json
@@ -1,32 +1,20 @@
 {
-    "name": "Lauren's Bachelorette",
-    "version": "1.0.0",
-    "description": "----------------------------------",
-    "main": "index.js",
-    "directories": {
-      "doc": "docs"
-    },
-    "scripts": {
-      "build": "parcel build index.html && cp _redirects ./dist/",
-      "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-      "type": "git",
-      "url": "git+https://github.com/abbykaemmerer/LaurenBach.git"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "bugs": {
-      "url": "https://github.com/abbykaemmerer/capstone/issues"
-    },
-    "homepage": "https://github.com/abbykaemmerer/LaurenBach.git#README",
-    "devDependencies": {
-      "babel-eslint": "^10.0.2",
-      "eslint": "^5.16.0",
-      "parcel-bundler": "^1.12.3"
-    },
-    "dependencies": {
-
-    }
-  }
+  "name": "LaurenBach",
+  "version": "1.0.0",
+  "description": "--- ###This app will be to display options for Lauren's Bachelorette Party It will be created using HTML, CSS, Javascript, and Node",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/abbykaemmerer/LaurenBach.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/abbykaemmerer/LaurenBach/issues"
+  },
+  "homepage": "https://github.com/abbykaemmerer/LaurenBach#readme"
+}
